[tool.poetry]
name = "coach-price-tracker"
version = "0.1.0"
description = "track coach prices to select best price"
authors = ["Medad Rufus Newman <medad@medadnewman.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
